<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings_menu_title"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/log_out"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout_menu_title"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/upload_data"
        android:icon="@android:drawable/stat_sys_upload"
        android:title="@string/upload_menu_title"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/download_data"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/download_menu_title"
        app:showAsAction="ifRoom|withText" />

</menu>