<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/about_title">
        </TextView>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_text"
            android:src="@drawable/ic_launcher_foreground" />
        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/about_information1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:justificationMode="inter_word"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/about_description_app1">
        </TextView>
        <TextView
            android:id="@+id/about_information2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_information1"
            android:justificationMode="inter_word"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/about_description_app2">
        </TextView>
        <TextView
            android:id="@+id/about_information3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_information2"
            android:justificationMode="inter_word"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:text="@string/about_description_app3">
        </TextView>
        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_information3"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/init_app"
            android:text="@string/about_button"/>
        <TextView
            android:id="@+id/about_information4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/about_author_data_version">
        </TextView>
    </RelativeLayout>

</layout>