<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="card"
            type="es.uam.eps.dadm.cards.Card" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:text="@{card.question}"
            tools:text="Question text" />

        <View
            android:id="@+id/separator"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="1dp"
            android:visibility="@{card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/separator"
            android:visibility="@{card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:textSize="20dp"
            android:text="@{card.answer}"
            tools:text="Answer text" />

        <Button
            android:id="@+id/answer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer_text_view"
            android:visibility="@{card.answered ? View.INVISIBLE : View.VISIBLE}"
            android:text="@string/answer_button_text" />

        <LinearLayout
            android:id="@+id/difficultyButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:visibility="@{card.answered ? View.VISIBLE : View.INVISIBLE}">

            <Button
                android:id="@+id/difficult_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/red"
                android:text="@string/difficult_button_title"
                android:onClick="@{() -> card.update_card(0)}">
            </Button>
            <Button
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/blue"
                android:text="@string/doubt_button_title"
                android:onClick="@{() -> card.update_card(3)}">
            </Button>
            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:backgroundTint="@color/green"
                android:text="@string/easy_button_title"
                android:onClick="@{() -> card.update_card(5)}">
            </Button>
        </LinearLayout>

    </RelativeLayout>
</layout>